bug report - outstanding bugs are listed here:

 http://sourceforge.net/tracker/?atid=106663&group_id=6663&func=browse

(to file another bug see the 'submit bug' button on this page).

====================================================================

0.76: please submit patches for this section with actual code/doc
      patches!

* pam_env: 'weichangyang of hotmail' pointed out a wild string with no
  valid '\0' was leading to problems with sshd and suggested fix (Bug
  473034 - agmorgan)
* MANDIR cleanup. It defaults to /usr/share/man, but can be overridden
  using the --enable-mandir ./configure option, similarly for DOCDIR
  from Nalin (Bug 476940 - agmorgan)
* pam_filter cleanup (including moving the filter directory) Nalin
  and Harald Welte (Bugs 436057, 476970 - agmorgan)
* pam_limits can handle negative priority limits now (which can apply
  to the superuser too) - based on patch from Nalin. Also cleanup the
  error handling that was very sloppy before (Bug 476990, 476987 -
  agmorgan)
* db3 is now recognized as a libdb candidate (Bug 435764 - agmorgan)
* more changes (extracted from redhat version) courtesy of
  Harald Welte (Bugs pam_limits=436061, pam_lastlog=436060,
  pam_mkhomedir/pam_env=435991 - agmorgan)
* fix for legacy behavior of pam_setcred and pam_close_session in
  the case that pam_authenticate and pam_open_session hadn't been
  called - bug report from Seongwan Park. (Bug 468724 - agmorgan)
* some BSD updates and fixes from Mark Murray - including a slightly
  more robust conversation function and some minimization of gcc
  warnings. (Bugs 449203,463984 - agmorgan)
* verified that the setcred stack didn't suffer from the bug I was
  nervous about, add a new module pam_debug to help me test this.
  fixed a libpam/pam_dispatch.c instrumentation line that I tripped
  over when testing. (Bug 424315 - agmorgan)
* pam_unix/support.c: sample use of reentrant NSS function.  Not yet active,